--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -1,16 +1,34 @@
 .design-banner-main {
   background: var(--black);
+
+  background-image: url("../../../public/images/main-oval.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
+
+.hero-top-links{
+  padding-top: 80px;
+  padding-bottom: 80px;
+
+}
 .hero-top-links a {
   max-width: 300px;
   font-size: 20px;
-  line-height: 1.5px;
+
   padding-bottom: 15px;
-  /* border-bottom: 1px solid var(--cl-white); */
+  border-bottom: 1px solid var(--cl-white);
   transition: all 0.3s;
   /* overflow: hidden; */
   text-decoration: none;
+  
+  display: inline-block;
+  font-weight: 400;
+
+  transition: all .3s;
+  overflow: hidden;
+
+  
 }
 .link-data {
   width: 300px;
@@ -18,3 +36,136 @@
 
   border-bottom: 1px solid var(--cl-white);
 }
+
+.pic-icon{
+  position: absolute;
+  top: 0;
+  right: 5px;
+  transform: translate(0,0) 
+}
+
+.title-wrapper{
+  max-width: 990px;
+  margin-bottom: 110px;
+  margin-top: 55px;
+
+}
+.title-heading{
+
+  font-family: "kanit";
+
+}
+
+.title-heading::after{
+  position: absolute;
+  content: "Pro";
+  width: 70px;
+  height: 45px;
+  right: -80px;
+  top: 70px;
+  border: 2px solid var(--cl-white);
+  border-radius: 15px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.3;
+  color: var(--cl-white);
+  text-align: center;
+  padding-top: 4px;
+}
+
+
+.title-subheading{
+  font-weight: 400;
+    font-size: 18px;
+    line-height: 1.4;
+    color: var(--gray3);
+    max-width: 410px;
+    position: absolute;
+    right: 60px;
+    bottom: 15px;
+}
+
+.arrow-section-main{
+  
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero1-bg{
+  position: absolute;
+  bottom: 0;
+  z-index: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  -webkit-animation: wcRotate 18s infinite linear;
+  animation: wcRotate 18s infinite linear;
+}
+
+/* 
+@media only screen and (min-width: 1200px) and (min-width: 1399px)  {
+.title-heading::after{
+  right: -30px;
+  top: 30px;
+}
+
+} */
+
+/* 
+@media only screen and (min-width: 992px) and (min-width: 1199px)  {
+  .title-heading::after{
+    right: -30px;
+    top: 30px;
+  }
+  
+  } */
+  /* @media only screen and (min-width: 768px) and (min-width: 991px)  {
+    .title-heading::after{
+      right: 90px;
+      top: -15px;
+    }
+    
+    } */
+    @media only screen and  (max-width: 767px)  {
+      .title-heading::after{
+        right: 0px;
+        top: -40px;
+      }
+      
+      }
+
+      @media only screen and (min-width: 992px) and (min-width: 1199px)  {
+        .title-subheading{
+         
+          bottom: 10px;
+        }
+      }
+
+      @media only screen and  (max-width: 767px)  {
+        .title-subheading{
+         position: unset;
+         padding-top: 15px;
+        }
+        
+        }
+
+        @media only screen and  (max-width: 767px)  {
+          .arrow-section-main{
+           display: flex;
+          flex-direction: column;
+          }
+          br{
+            display: none;
+          }
+          
+          }
+  
+
+
+
+
+
+
+
+
+
