swiper bottom banner Section

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   --black4: #1d1d1d;
   --black: #000;
   --gray3:#a8a8a8;
+  --secondary:#2c2c2c;
+  --primary:#c9f31d;
+  --gray2:#999;
 }
 
 .App {
@@ -56,6 +59,9 @@
 .fs-18 {
   font-size: 18px !important;
 }
+.fs-26{
+  font-size: 26px;
+}
 .fw-400 {
   font-weight: 400;
 }
@@ -84,4 +90,26 @@
 }
 .fs-50{
   font-size: 50px;
+}
+
+.t-uppercase{
+
+}
+
+.pt-140{
+  padding-top: 140px;
+}
+.pb-130{
+  padding-bottom: 130px;
+}
+
+.fs-60{
+  font-size: clamp(2rem, -0.1875rem + 7vw, 3.75rem);
+}
+.cl-gray2{
+  color:var(--gray2);
+}
+
+.p-40{
+padding: 40px;
 }
