--- a/src/components/Swiper/swiperstyle.css
+++ b/src/components/Swiper/swiperstyle.css
@@ -1,53 +1,44 @@
-.roll-area{
-    padding: 31px 10px;
-    background-color: var(--black2);
+.roll-area {
+  padding: 31px 10px;
+  background-color: var(--black2);
 }
 
-
-
-.swiper-1{
+.swiper-1 {
   background-color: var(--black2);
   padding: 31px 10px;
-
-
-  
 }
-.swiper-2{
-  background-color: #331C53;
+.swiper-2 {
+  background-color: #331c53;
   padding: 31px 10px;
-
-
-  
 }
 
-.about-area{
+.about-area {
   background-color: var(--black2);
-  
 }
-.about-maintitle{
-   padding-left: 190px;
-   padding-bottom: 60px;
+.about-maintitle {
+  padding-left: 190px;
+  padding-bottom: 60px;
 }
 
-.about-title{
-  max-width: 770px;
+.about-title {
+  max-width: 780px;
 
   z-index: 9;
 
   line-height: 1;
 }
-.about-right-img{
+.about-right-img {
   position: absolute;
-  right: 0;
+  right: -30px;
   top: -155px;
 }
 
-.secondary{
+.secondary {
   width: 53px;
   height: 56px;
   background: var(--secondary);
 }
-.primary{
+.primary {
   width: 54px;
   height: 56px;
   background-color: var(--primary);
@@ -55,38 +46,23 @@
   margin-left: 24px;
 }
 
-.about-content-main{
+.about-content-main {
   /* display: grid;
   grid-template-columns: 1fr 1.8fr;
    gap: 80px; */
 }
 
-.about-description{
+.about-description {
   padding-top: 65px;
-
 }
-.about-description p{
-
-
-
+.about-description p {
 }
 
-
-
-
-/* .shape{
+.shape {
   position: absolute;
-  left: 27rem;
-  bottom: 4rem;
-
-
-} */
-
-
-
-
-
-
+  bottom: -80px;
+  left: -130px;
+}
 
 /* .swiper {
   width: 100%;
@@ -102,8 +78,6 @@
   align-items: center;
 } */
 
-
-
 @media (max-width: 760px) {
   .swiper-button-next {
     right: 20px;
@@ -113,5 +87,23 @@
   .swiper-button-prev {
     left: 20px;
     transform: rotate(90deg);
+  }
+}
+/* @media (max-width: 992px) {
+  .shape {
+    position: unset;
+  }
+
+  .about-right-img {
+    position: unset;
+  }
+} */
+@media (max-width: 1240px) {
+  .shape {
+    position: unset;
+  }
+
+  .about-right-img {
+    display: none;
   }
 }
