--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -126,13 +126,20 @@
     }
     
     } */
-    @media only screen and  (max-width: 767px)  {
+    @media only screen and  (max-width: 768px)  {
       .title-heading::after{
         right: 0px;
         top: -40px;
       }
       
       }
+      @media only screen and  (max-width: 1024px)  {
+        .title-heading::after{
+          right: 0px;
+          top: -40px;
+        }
+        
+        }
 
       @media only screen and (min-width: 992px) and (min-width: 1199px)  {
         .title-subheading{
@@ -141,7 +148,7 @@
         }
       }
 
-      @media only screen and  (max-width: 767px)  {
+      @media only screen and  (max-width: 768px)  {
         .title-subheading{
          position: unset;
          padding-top: 15px;
