--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,14 @@
 .p-40 {
   padding: 40px;
 }
+
+.fs-20{
+  font-size: clamp(1rem, 0.6875rem + 1vw, 1.25rem);
+}
+
+.fs-28{
+  font-size: 28px;
+}
+.fs-48{
+  font-size: 40px;
+}
