--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   --secondary: #2c2c2c;
   --primary: #c9f31d;
   --gray2: #999;
+  --white3:#e9e9e9;
+  --white4:#f0f0f0;
 }
 
 .App {
@@ -126,5 +128,19 @@
 
 .pt-130{
   padding-top: 130px;
+  padding-bottom: 110px;
+}
+
+.pb-60{
+  padding-bottom: 60px;
+}
+.fs-14{
+  font-size: 14px;
+}
+
+.pt-150{
+  padding-top: 150px;
+}
+.pb-110{
   padding-bottom: 110px;
 }
