--- a/src/components/SolutionSection/solution.css
+++ b/src/components/SolutionSection/solution.css
@@ -88,6 +88,56 @@
 
 }
 
+.brands-item{
+
+
+    padding: 40px;
+    text-align: center;
+    /* border-top: 1px solid var(--white3);
+    border-right: 1px solid var(--white3); */
+    border: 1px solid;
+}
+
+.brands-list-section{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    /* border-bottom: 1px solid var(--white3); */
+    margin-left: 1px;
+
+
+}
+
+.line1::before{
+    position: absolute;
+    content: "";
+    width: 1px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: var(--white4)
+}
+
+.content-subtitle{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.3;
+    text-transform: uppercase;
+
+    border: 1px solid var(--gray2);
+    display: inline-block;
+    padding: 5px 17px;
+    border-radius: 30px;
+    margin-bottom: 10px;
+}
+
+.btn-cta{
+    text-align: -webkit-center;
+}
+
+.fs-50{
+    font-size: clamp(2.25rem, 1.1563rem + 3.5vw, 3.125rem);
+}
+
 @media only screen and  (max-width: 767px)  {
 
 
