Footer Completed and animation in progresss

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --gray2: #999;
   --white3:#e9e9e9;
   --white4:#f0f0f0;
+  --black5:#171717;
 }
 
 .App {
@@ -144,3 +145,26 @@
 .pb-110{
   padding-bottom: 110px;
 }
+
+.fw-600{
+  font-weight: 600;
+}
+
+
+.mb-12{
+  margin-bottom: 12px;
+}
+
+.fs-36{
+ font-size: 36px;  
+}
+
+.pb-150{
+  padding-bottom: 150px;
+}
+
+.pt-150{
+  padding-top: 150px;
+}
+
+
