--- a/src/components/Footer/footer-section.css
+++ b/src/components/Footer/footer-section.css
@@ -1,8 +1,104 @@
-.footer-top{
-    background-image: url(../../../public/images/footer.jpg);
-    background-repeat: no-repeat;
-    background-position: right;
+.footer-main{
+ position: relative;
+
+z-index: -1; 
 }
 .footer-pic{
-    object-fit: contain;
+    text-align: end;
+
 }
+
+.footer-top{
+    background-color: var(--black);
+}
+.footer-inner{
+
+    background-color:var(--black5);
+
+    margin-bottom: -85px;
+
+}
+
+.footer-img{
+    height: 45px;
+}
+
+.pixarsart-desc p{
+    max-width: 310px;
+
+}
+
+.footer-link{
+    list-style: none;
+    padding-left: 0px;
+}
+
+.mind-title{
+    line-height: 1.3;
+    padding-bottom: 25px;
+    margin-top: -10px;
+}
+
+.mind-section-main{
+ background-color: var(--black4);
+}
+
+.copywrite-data{
+    max-width: 200px;
+}
+
+.copywrite-main{
+    background-color: var(--black5);
+}
+
+.copy-write-right{
+    background-color: var(--black4);
+}
+
+
+.footer-inner-main{
+    position: absolute;
+    z-index: 4;
+    top: 16rem;
+    
+
+}
+
+.footer-image{
+    max-width: 75%;
+}
+
+/* @media only screen and  (min-width: 0px)  and (max-width: 576px) {
+
+.footer-inner-main{
+    position: unset;
+    z-index: 0;
+    top: 0;
+}
+
+
+    
+    } */
+
+    @media only screen and  (min-width: 0px) and (max-width:768px)  {
+
+
+
+        .footer-image{
+    
+   max-width: 100% !important;
+        }
+        
+        }
+
+
+
+
+
+
+
+
+
+
+
+
