--- a/src/components/Swiper/swiperstyle.css
+++ b/src/components/Swiper/swiperstyle.css
@@ -12,9 +12,36 @@
   padding: 31px 10px;
 }
 
+/* .about-left-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.about-left-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: translate3d(0, 0, 0);
+  will-change: transform;
+}
+
+.about-left-img img:hover {
+  transform: translate3d(
+    0,
+    -50px,
+    0
+  ); /* adjust the distance and direction as needed */
+
 .about-area {
   background-color: var(--black2);
+  /* overflow-y: auto; */
 }
+
 .about-maintitle {
   padding-left: 190px;
   padding-bottom: 60px;
