--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -37,9 +37,36 @@
   position: absolute;
   top: 0;
   right: 5px;
-  transform: translate(0, 0);
 }
 
+.hero-top-links a:hover span::after {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translate(10px, -10px) rotate(-45deg);
+  left: -20px;
+  bottom: -35px;
+}
+
+.hero-top-links a:hover i::before {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translate(10px, -10px) rotate(-45deg);
+}
+
+.arrow2::before {
+  position: absolute;
+  content: "\f061";
+  font-family: "font awesome 6 free";
+  font-weight: 900;
+  left: -20px;
+  bottom: -35px;
+  -webkit-transform: translate(0, 0) rotate(-45deg);
+  transform: translate(0, 0) rotate(-45deg);
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
 .title-wrapper {
   margin-bottom: 110px;
   margin-top: 55px;
@@ -60,6 +87,17 @@
   100% {
     left: 0%;
     opacity: 1;
+  }
+} */
+
+/* @keyframes slide2 {
+  0%,
+  100% {
+    transform: translate(0, 0) rotateY(5deg);
+  }
+
+  50% {
+    transform: translate(10px) rotateY(5deg);
   }
 } */
 
@@ -110,22 +148,98 @@
   left: 0;
   width: 100%;
   height: auto;
-  -webkit-animation: wcRotate 18s infinite linear;
-  animation: wcRotate 18s infinite linear;
+  /* -webkit-animation: wcRotate 18s infinite linear;
+  animation: wcRotate 18s infinite linear; */
+}
+
+.title-heading {
+}
+
+.price1 {
+  animation: fadeInUp 2s linear;
+}
+
+.right-anima {
+  /* transform-origin: left; */
+  animation: animate 1s;
+  opacity: 1;
+}
+
+.pic-icon::after {
+  position: absolute;
+  content: "\f061";
+  font-family: "font awesome 6 free";
+  font-weight: 900;
+  left: -35px;
+  bottom: -60px;
+  -webkit-transform: translate(0, 0) rotate(-45deg);
+  transform: translate(0, 0) rotate(-45deg);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+@keyframes animate {
+  /* 0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  } */
+  0% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  20% {
+    transform: translateY(-60%);
+    opacity: 1;
+  }
+  40% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  60% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    transform: translate(0px, 100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0px, 0);
+    opacity: 1;
+  }
+}
+
+.title-heading .right-anima:nth-child(1) {
+  animation-delay: 0.1s;
 }
 
 .price {
   animation: fadeInUp 3s ease-in-out 0s forwards;
 }
 
-.cright {
-  animation: fadeInRight 3s ease-in-out 0s forwards;
+.title-heading .right-anima:nth-child(5) {
+  animation-delay: 0.5s;
 }
 
 .char {
   display: inline-block;
   color: aliceblue;
-  animation: loading-text 3s ease-in-out;
+  animation: loading-text 1s ease-in-out;
 }
 
 @keyframes fadeInUp {
@@ -140,186 +254,26 @@
   }
 }
 
-/* .char:nth-child(1) {
-  animation-delay: -40000ms;
-}
-.char:nth-child(2) {
-  animation-delay: -39000ms;
-}
-.char:nth-child(3) {
-  animation-delay: -38000ms;
-}
-.char:nth-child(4) {
-  animation-delay: -37000ms;
-}
-.char:nth-child(5) {
-
-  animation-delay: -36000ms;
-}
-.char:nth-child(6) {
-  animation-delay: -35000ms;
-}
-.char:nth-child(7) {
-  animation-delay: -34000ms;
-}
-.char:nth-child(8) {
-  animation-delay: -33000ms;
-}
-.char:nth-child(9) {
-  animation-delay: -32000ms;
-}
-.char:nth-child(10) {
-  animation-delay: -31000ms;
-}
-.char:nth-child(11) {
-  animation-delay: -30000ms;
-}
-.char:nth-child(12) {
-  animation-delay: -29000ms;
-}
-.char:nth-child(13) {
-  animation-delay: -28000ms;
-}
-.char:nth-child(14) {
-  animation-delay: -27000ms;
-}
-.char:nth-child(15) {
-  animation-delay: -26000ms;
-}
-.char:nth-child(16) {
-  animation-delay: -25000ms;
-}
-.char:nth-child(17) {
-  animation-delay: -24000ms;
-}
-.char:nth-child(18) {
-  animation-delay: -23000ms;
-}
-.char:nth-child(19) {
-  animation-delay: -22000ms;
-}
-.char:nth-child(20) {
-  animation-delay: -21000ms;
-}
-.char:nth-child(21) {
-  animation-delay: -0.2ms;
-}
-.char:nth-child(22) {
-  animation-delay: -0.21ms;
-}
-.char:nth-child(23) {
-  animation-delay: -0.22ms;
-}
-.char:nth-child(24) {
-  animation-delay: -0.23ms;
-}
-.char:nth-child(25) {
-  animation-delay: -0.24ms;
-}
-.char:nth-child(25) {
-  animation-delay: -0.25ms;
-}
-.char:nth-child(26) {
-  animation-delay: -0.26ms;
-}
-.char:nth-child(27) {
-  animation-delay: -0.27ms;
-}
-
-.char:nth-child(28) {
-  animation-delay: -0.28ms;
-}
-.char:nth-child(29) {
-  animation-delay: -0.29ms;
-}
-.char:nth-child(30) {
-  animation-delay: -0.3ms;
-}
-.char:nth-child(31) {
-  animation-delay: -0.31ms;
-}
-.char:nth-child(32) {
-  animation-delay: -0.32ms;
-}
-.char:nth-child(33) {
-  animation-delay: -0.33ms;
-}
-.char:nth-child(34) {
-  animation-delay: -0.34ms;
-}
-.char:nth-child(35) {
-  animation-delay: -0.35ms;
-}
-.char:nth-child(36) {
-  animation-delay: -0.37ms;
-}
-.char:nth-child(37) {
-  animation-delay: -0.38ms;
-}
-.char:nth-child(38) {
-  animation-delay: -0.39ms;
-}
-.char:nth-child(39) {
-  animation-delay: -0.4ms;
-}
-.char:nth-child(40) {
-  animation-delay: -0.41ms;
-} */
-
 .title-subheading {
   animation-delay: -0.21ms;
 }
 
 @keyframes loading-text {
-  /* 0% {
-    transform: translateY(0%);
+  from {
     opacity: 0;
-  } */
-  /* 20% {
-    transform: translateY(-60%);
+    transform: translateX(100%);
+  }
+
+  to {
+    /* transform: translateX(0%); */
     opacity: 1;
-  } */
-  /* 40% {
-    transform: translateX(30%);
-    opacity: 0;
-  } */
+  }
+}
 
-  0% {
-    transform: translateX(+100%);
-    /* transform: translateX(+60%); */
-    opacity: 0;
-    /* transform: scale(0);  */
-  }
-  40% {
-    opacity: 0;
-  }
-
-  60% {
-    /* transform: translateX(+60%); */
-    opacity: 0;
-  }
+@keyframes shuffle {
   100% {
-    /* transform: translateX(-60%); */
-    opacity: 1;
-    /* transform: translateX(+60%);
-    opacity: 0; */
+    transform: translateZ(-10px);
   }
-
-  /* 
-  100% {
-    transform: translateX(-50%);
-    opacity: 1;
-  } */
-  /* 60% {
-    transform: translateX(50%);
-    opacity: 1;
-  }
-  80% {
-    opacity: 1;
-  } */
-  /* 100% {
-    opacity: 1;
-  } */
 }
 
 @media only screen and (max-width: 768px) {
