--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -39,6 +39,10 @@
   right: 5px;
 }
 
+.service-title {
+  color: #999;
+}
+
 .hero-top-links a:hover span::after {
   opacity: 1;
   visibility: visible;
