--- a/src/components/SolutionSection/solution.css
+++ b/src/components/SolutionSection/solution.css
@@ -1,36 +1,39 @@
 .btn-secondary {
   display: flex;
   justify-content: center;
-  width: 170px;
-  height: 170px;
+  /* width: 170px;
+  height: 170px; */
   text-decoration: none;
   font-size: 16px;
   line-height: 1.3;
-  border: 1px solid var(--secondary);
+  /* border: 1px solid var(--secondary); */
   text-align: center;
   align-items: center;
+  /* border-radius: 50%; */
+  color: #fff;
+}
+
+.button-add {
+  width: 170px;
+  height: 170px;
   border-radius: 50%;
 }
 
-.btn-cta {
-  display: flex;
-  -webkit-box-pack: center;
-
-  justify-content: center;
-  -webkit-box-align: center;
-
-  align-items: center;
-  position: relative;
-  height: 250px;
-  width: 250px;
-  border-radius: 100%;
-}
-.btn-cta:hover .btn-background {
+.btn-secondary::before {
+  content: "";
   position: absolute;
-  z-index: 1;
-  height: 170px;
-  width: 170px;
-  background-color: var(--primary);
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 28px;
+  background: var(--primary);
+
+  transition: all 0.3s ease;
+}
+
+.btn-secondary:hover::before {
+  width: 100%;
+  background: var(--primary);
 }
 
 /* .btn-secondary:hover {
@@ -130,7 +133,7 @@
 
 .brands-list-section {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
   /* border-bottom: 1px solid var(--white3); */
   margin-left: 1px;
 }
@@ -216,24 +219,52 @@
   color: white;
 }
 
-.btn-background {
-  position: absolute;
-  content: "";
-  width: 20px;
-  height: 20px;
-  left: 0;
-  top: 0;
-  background-color: var(--primary);
-  z-index: -1;
-  border-radius: 100%;
-  -webkit-transition: all 0.7s;
-  transition: all 0.7s;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
 .arrow-anim:hover {
   animation: updown 0.5s ease-in-out;
+}
+
+.solution-anim {
+  -webkit-animation: fadetop 4s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+  animation: fadetop 4s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+
+  /* -webkit-animation: fadeUp 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: fadeUp 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; */
+}
+
+.fade-to-right {
+  -webkit-animation-name: fadeInLeft;
+  -moz-animation-name: fadeInLeft;
+  -o-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1.5s;
+  -moz-animation-duration: 1.5s;
+  -o-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-delay: 1.5s;
+  -moz-animation-delay: 1.5s;
+  -o-animation-duration: 1.5s;
+  animation-delay: 1s;
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translatex(-100px);
+    -moz-transform: translatex(-100px);
+    -o-transform: translatex(-100px);
+    transform: translatex(-100px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translatex(0);
+    -moz-transform: translatex(0);
+    -o-transform: translatex(0);
+    transform: translatex(0);
+  }
 }
 
 @keyframes updown {
@@ -273,4 +304,112 @@
   .about-2-main {
     background-image: none;
   }
+}
+
+@keyframes fadetop {
+  0% {
+    letter-spacing: -0.1em;
+    -webkit-transform: translateZ(1500px) translateY(30px);
+    transform: translateZ(1500px) translateY(30px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+.bounce-top {
+  -webkit-animation: bounce-in-top 1.1s both;
+  animation: bounce-in-top 2s both;
+}
+
+@keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-35px);
+    transform: translateY(-35px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+
+.btn-animate {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  opacity: 0;
+  background-color: var(--primary);
+  z-index: -1;
+  border-radius: 100%;
+  -webkit-transition: all 0.7s;
+  transition: all 0.7s;
+  -webkit-transform: translate(-20%, -20%);
+}
+
+.btn-cta:hover .btn-secondary .btn-animate {
+  width: 170px;
+  height: 170px;
+  -webkit-transform: translate(0%, 0%);
+
+  opacity: 1;
+}
+
+.button-add {
+  position: relative;
+  z-index: 5;
+  background-color: transparent !important;
+  border-color: #2c2c2c;
+}
+
+.btn-cta:hover .btn-secondary {
+  color: #2c2c2c;
 }
