--- a/src/components/Swiper/slider.css
+++ b/src/components/Swiper/slider.css
@@ -65,54 +65,76 @@
 }
 
 .about-desc-data {
-  animation: fadeUp 1s ease-in-out 5s forwards;
+  -webkit-animation: fadeUp 15s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+  animation: fadeUp 15s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
 .first {
   animation: fadeUp 1.2s ease-in-out 0s forwards;
 }
 .second {
-  animation: fadeUp 1.3s ease-in-out 0s forwards;
-}
-.third {
   animation: fadeUp 1.4s ease-in-out 0s forwards;
 }
-.fourth {
+.third {
   animation: fadeUp 1.6s ease-in-out 0s forwards;
 }
-.fifth {
+.fourth {
   animation: fadeUp 1.8s ease-in-out 0s forwards;
 }
+.fifth {
+  animation: fadeUp 1.11s ease-in-out 0s forwards;
+}
 .sixth {
-  animation: fadeUp 1.1s ease-in-out 0s forwards;
+  animation: fadeUp 1.13s ease-in-out 0s forwards;
 }
 
 .seventh {
-  animation: fadeUp 1.12s ease-in-out 0s forwards;
+  animation: fadeUp 1.15s ease-in-out 0s forwards;
 }
 
 .eighth {
-  animation: fadeUp 1.14s ease-in-out 0s forwards;
+  animation: fadeUp 1.17s ease-in-out 0s forwards;
 }
 
 .ninth {
-  animation: fadeUp 1.16s ease-in-out 0s forwards;
+  animation: fadeUp 1.17s ease-in-out 0s forwards;
 }
 .tenth {
-  animation: fadeUp 1.18s ease-in-out 0s forwards;
+  animation: fadeUp 1.22s ease-in-out 0s forwards;
 }
 
 .eleventh {
-  animation: fadeUp 2s ease-in-out 0s forwards;
+  animation: fadeUp 1.24s ease-in-out 0s forwards;
 }
+/* animation: fadeUp 2s ease-in-out 0s forwards; */
 
 @keyframes fadeUp {
-  0% {
-    transform: translate3d(0px, 60%, 0px);
+  /* 0% {
     opacity: 0;
+    transform: translateY(+80%);
+  }
+
+  50% {
+    transform: translateY(0px);
+    opacity: 1;
   }
 
   100% {
+    opacity: 1;
+  } */
+
+  0% {
+    letter-spacing: -0.1em;
+    -webkit-transform: translateZ(1500px) translateY(100px);
+    transform: translateZ(1500px) translateY(100px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
     opacity: 1;
   }
 }
