--- a/src/components/TopNav/top-nav.css
+++ b/src/components/TopNav/top-nav.css
@@ -58,6 +58,14 @@
   padding-left: 30px;
   padding-right: 30px;
 }
+
+@media screen {
+  @media only screen and (max-width: 1240px) {
+    .nav-middle-area {
+      display: none;
+    }
+  }
+}
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .offcanvas-links {
     padding-left: 30px;
