--- a/src/components/TopNav/top-nav.css
+++ b/src/components/TopNav/top-nav.css
@@ -60,7 +60,7 @@
 }
 
 @media screen {
-  @media only screen and (max-width: 1240px) {
+  @media only screen and (min-width: 0px) and (max-width: 992px) {
     .nav-middle-area {
       display: none;
     }
