--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -315,3 +315,26 @@
     display: none;
   }
 }
+
+.cssanimation,
+.cssanimation span {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.cssanimation span {
+  display: inline-block;
+}
+
+.leFadeInLeft span {
+  animation-name: leFadeInLeft;
+}
+@keyframes leFadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(60px);
+  }
+  to {
+    opacity: 1;
+  }
+}
