--- a/src/components/TopNav/top-nav.css
+++ b/src/components/TopNav/top-nav.css
@@ -59,6 +59,12 @@
   padding-right: 30px;
 }
 
+.service:hover {
+  transform: translateY(-4px) translateZ(0);
+  transition: transform 0.4s ease, box-shadow 0.4s ease,
+    -webkit-transform 0.4s ease, -webkit-box-shadow 0.4s ease;
+}
+
 @media screen {
   @media only screen and (min-width: 0px) and (max-width: 992px) {
     .nav-middle-area {
