--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -338,3 +338,231 @@
     opacity: 1;
   }
 }
+
+.s-animate {
+  font-size: 15rem;
+}
+
+.s-animate:hover {
+  animation: dancing 10s linear;
+
+  /* font-variation-settings: 790; */
+}
+
+/* .s-animate > span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.s-animate > span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.s-animate > span:nth-child(4) {
+  animation-delay: 0.6s;
+} */
+
+/* @keyframes dancing {
+  0% {
+    transform: scaleY(0.5);
+  }
+  50% {
+    transform: scaleY(0.3);
+  }
+
+  100% {
+    transform: scaleY(0.2);
+  }
+} */
+
+.first-element {
+  /* --fontHeight: 50; */
+  /* font-family: Tusker, sans-serif; */
+  /* font-size: 14.95rem; */
+  /* font-variation-settings: "wght" 850; */
+  /* font-weight: 100; */
+  line-height: 1;
+  color: aliceblue;
+  position: absolute;
+  display: inline-block;
+  /* translate: none; */
+  /* rotate: none; */
+  /* scale: none; */
+  /* opacity: 1; */
+  font-size: 290px;
+
+  bottom: 0;
+  left: 0;
+  /* transform: translate(0px, 0px); */
+  /* 
+  animation: dancing 1s linear infinite;
+  transform-origin: bottom; */
+}
+
+.updown:hover {
+  transform: scaleY(1.75);
+  transform-origin: bottom;
+  line-height: 1;
+}
+
+.sound-main {
+  position: relative;
+
+  height: 400px;
+}
+
+.sec-element {
+  line-height: 1;
+  color: aliceblue;
+  position: absolute;
+  display: inline-block;
+  /* translate: none; */
+  /* rotate: none; */
+  /* scale: none; */
+  /* opacity: 1; */
+  font-size: 290px;
+  bottom: 0;
+  left: 150px;
+
+  /* animation: second 1s linear infinite;
+  transform-origin: bottom; */
+}
+.third-element {
+  line-height: 1;
+  color: aliceblue;
+  position: absolute;
+  /* display: inline-block; */
+  font-size: 290px;
+  bottom: 0;
+  left: 360px;
+
+  /* animation: third 1s linear infinite;
+  transform-origin: bottom; */
+}
+.fourth-element {
+  line-height: 1;
+  color: aliceblue;
+  position: absolute;
+  /* display: inline-block; */
+  font-size: 290px;
+  bottom: 0;
+  left: 540px;
+  /* animation: fourth 1s linear infinite;
+  transform-origin: bottom; */
+}
+.fifth-element {
+  line-height: 1;
+  color: aliceblue;
+  position: absolute;
+  /* display: inline-block; */
+  font-size: 290px;
+  bottom: 0;
+  left: 720px;
+  /* animation: fifth 1s linear infinite;
+  transform-origin: bottom; */
+}
+
+@keyframes dancing {
+  0% {
+    transform: scaleY(1);
+  }
+  20% {
+    transform: scaleY(1.2);
+  }
+  40% {
+    transform: scaleY(1.4);
+  }
+
+  75% {
+    transform: scaleY(1.6);
+  }
+
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+@keyframes second {
+  0% {
+    transform: scaleY(0.8);
+  }
+  20% {
+    transform: scaleY(1);
+  }
+  40% {
+    transform: scaleY(1.2);
+  }
+
+  75% {
+    transform: scaleY(1.4);
+  }
+
+  100% {
+    transform: scaleY(1.6);
+  }
+}
+
+@keyframes third {
+  0% {
+    transform: scaleY(1.3);
+  }
+  20% {
+    transform: scaleY(1.5);
+  }
+  40% {
+    transform: scaleY(1.7);
+  }
+
+  75% {
+    transform: scaleY(1.4);
+  }
+
+  100% {
+    transform: scaleY(1.3);
+  }
+}
+
+@keyframes fourth {
+  0% {
+    transform: scaleY(1);
+  }
+  20% {
+    transform: scaleY(0.9);
+  }
+  40% {
+    transform: scaleY(1.3);
+  }
+
+  75% {
+    transform: scaleY(1.5);
+  }
+
+  100% {
+    transform: scaleY(1.7);
+  }
+}
+
+@keyframes fifth {
+  0% {
+    transform: scaleY(1.4);
+  }
+  20% {
+    transform: scaleY(1.6);
+  }
+  40% {
+    transform: scaleY(1.2);
+  }
+
+  75% {
+    transform: scaleY(1.3);
+  }
+
+  100% {
+    transform: scaleY(1.1);
+  }
+}
+
+.hover-effect-sound {
+  /* animation: second 1s linear infinite;
+  animation: third 1s linear infinite;
+  animation: fourth 1s linear infinite;
+  animation: fifth 1s linear infinite; */
+  transform-origin: bottom;
+}
